--- a/pom.xml
+++ b/pom.xml
@@ -67,13 +67,23 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- H2 para testes (ou use runtime se quiser rodar local sem MySQL) -->
+    <!-- H2 para testes -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <!-- Dependência do Banco de dados PostgreSQL -->
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+	</dependency> 
+    	<!-- Dependência para Geração do Swagger -->
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.8.9</version>
+	 </dependency>
     <!-- Testes -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
