--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.application.name=blogpessoal
+
+spring.profiles.active=prod
+
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packagesToScan=com.generation.blogpessoal.controller
+springdoc.swagger-ui.use-root-path=true
