--- a/src/test/resources/application-prod.properties
+++ b/src/test/resources/application-prod.properties
@@ -1,6 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://${POSTGRESHOST}:${POSTGRESPORT}/${POSTGRESDATABASE}
+spring.datasource.url=jdbc:postgresql://${POSTGRESHOST}:${POSTGRESPORT}/${POSTGRESDATABASE}?sslmode=require
 spring.datasource.username=${POSTGRESUSER}
 spring.datasource.password=${POSTGRESPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
