--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=blogpessoal
 
-spring.profiles.active=prod
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
