--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,12 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- DB 
+    <!-- DB -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
-    </dependency>-->
+    </dependency>
 
     <!-- H2 para testes -->
     <dependency>
